# FEM_old

./: .gitignore  FEM-equations.tex  FEM-flowchart.graffle  Xcode configuration.rtf  flowchart-cleaned.graffle  fork commands.txt
FEM/: CMakeLists.txt  Comparison.xlsx  Haohang-Feb 12 2018.pptx  Learning Note.rtf  MyUnderstandProject.udb  Programming pack.rtf  Progress.rtf  Weekly Progress.rtf  compile.sh  input_example.txt  sample_input.txt  sample_input_issam.txt  sample_input_new.txt  timing.xlsx
FEM/FEM/: Analysis.cpp  Analysis.h  BackAnalysis.cpp  BackAnalysis.h  CMakeLists.txt  Doxyfile  Element.cpp  Element.h  ElementQ4.cpp  ElementQ4.h  ElementQ8.cpp  ElementQ8.h  ElementT6.cpp  ElementT6.h  Learning Note.rtf  Linear.cpp  Linear.h  LinearElastic.cpp  LinearElastic.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Nonlinear.cpp  Nonlinear.h  NonlinearElastic.cpp  NonlinearElastic.h  Progress.rtf  Shape.cpp  Shape.h  ShapeQ4.cpp  ShapeQ4.h  ShapeQ8.cpp  ShapeQ8.h  ShapeT6.cpp  ShapeT6.h  Tasks.rtf  Tasks.txt  (+13 more)
FEM/FEM.xcodeproj/: project.pbxproj
FEM/GT_PAVE/: $$F32VWB.CRF  140E_RZ.PS  140NLE_R.LAY  140NLE_R.S01  140NLE_R.S02  140NLE_R.S03  2CON_12.FUL  2CON_12.IN  2CON_35.FUL  2CON_35.IN  2CON_35.NL  2CON_6.FUL  2CON_6.IN  2FCON_35.IN  3ISTRUDL.IN  3LAYARES.IN  3LAYERA.IN  3LAYERI.GRF  3LAYERI.IN  3LAYRESA.IN  3LAYRESI.IN  3LNLA.IN  3LNLRESA.IN  ABAQUS3LAYERA.IN  ANGLE  BASE.XLS  BOUSS.XLS  BOUSS1.GRF  CHKLIST.MS  FELELAY.FOR  FENLIN.FOR  FETEN.FOR  FIG8_11.PS  GT1.IN  GT1FULL.IN  GT1LIN.IN  GT2140L.TEN  GT2140RE.IN  GT2FINE.IN  GT2FINE.NL  (+36 more)
FEM/Input/: input_110161.txt  input_121095.txt  input_13365.txt  input_139.txt  input_153.txt  input_18585.txt  input_24418.txt  input_30645.txt  input_317.txt  input_38023.txt  input_3layer_anisotropic_issam .txt  input_3layer_issam.txt  input_46531.txt  input_53730.txt  input_567.txt  input_63765.txt  input_74233.txt  input_84825.txt  input_889.txt  input_889_1layer.txt  input_889_3layer.txt  input_889_3layer_anisotropic.txt  input_889_3layer_fixed.txt  input_889_3layer_fixed2.txt  input_889_3layer_nonlinear.txt  input_889_fixed.txt  input_96838.txt  input_9901.txt  input_body.txt  input_dense.txt  input_edge.txt  input_edge_negative y.txt  input_issam.txt  input_medium.txt  input_point.txt  input_temperature.txt  input_triaxial.txt  input_triaxial_new.txt  input_w_bc_ya.txt  input_wo_bc_la.txt  (+2 more)
FEM/Mesh Generator/: Mesh_generator.py  Mesh_test.py  input_sparse.txt  map.py  sample.ui
FEM/Output/: Boussinesq Comparison_889n_270e.xlsx  Boussinesq Comparison_889n_270e_fixed.xlsx  comparison_1layer.xlsx  comparison_3layer.xlsx  comparison_triaxial.xlsx  input_issam.vtk  kenpave_1layer.TXT  kenpave_3layer.TXT  output.txt  output_139.vtk  output_153.vtk  output_3layer_issam.txt  output_3layer_issam.vtk  output_8069.vtk  output_852.vtk  output_889.vtk  output_889_1layer.txt  output_889_1layer.vtk  output_889_3layer.txt  output_889_3layer.vtk  output_889_3layer_anisotropic.vtk  output_889_3layer_fixed.vtk  output_889_3layer_fixed2.vtk  output_889_3layer_nonlinear.txt  output_889_3layer_nonlinear.vtk  output_889_fixed.vtk  output_dense.txt  output_dense.vtk  output_edge.txt  output_edge.vtk  output_edge_.vtk  output_medium.vtk  output_point.txt  output_sparse.txt  output_sparse.vtk  output_temperature.txt  output_w_bc_ya.vtk  output_wo_bc_la.vtk  output_wo_bc_ya.vtk  vtk_edge.vtk  (+2 more)
FEM/PyFEM/: PyFEM.py
FEM/Triaxial/: FENLIN.FOR  FENLIN_input guide.IN
FEM/html/: _analysis_8cpp.html  _analysis_8cpp_source.html  _analysis_8h.html  _analysis_8h_source.html  _element_8cpp.html  _element_8cpp_source.html  _element_8h.html  _element_8h_source.html  _element_q4_8cpp.html  _element_q4_8cpp_source.html  _element_q4_8h.html  _element_q4_8h_source.html  _element_q8_8cpp.html  _element_q8_8cpp_source.html  _element_q8_8h.html  _element_q8_8h_source.html  _element_t6_8cpp.html  _element_t6_8h.html  _linear_elastic_8cpp.html  _linear_elastic_8cpp_source.html  _linear_elastic_8h.html  _linear_elastic_8h_source.html  _material_8cpp.html  _material_8h.html  _mesh_8cpp.html  _mesh_8cpp_source.html  _mesh_8h.html  _mesh_8h_source.html  _node_8cpp.html  _node_8cpp_source.html  _node_8h.html  _node_8h_source.html  _shape_8cpp.html  _shape_8h.html  _shape_8h_source.html  _shape_q4_8cpp.html  _shape_q4_8cpp_source.html  _shape_q4_8h.html  _shape_q4_8h_source.html  _shape_q8_8cpp.html  (+48 more)
FEM/latex/: _analysis_8cpp.tex  _analysis_8h.tex  _element_8cpp.tex  _element_8h.tex  _element_q4_8cpp.tex  _element_q4_8h.tex  _element_q8_8cpp.tex  _element_q8_8h.tex  _element_t6_8cpp.tex  _element_t6_8h.tex  _linear_elastic_8cpp.tex  _linear_elastic_8h.tex  _material_8cpp.tex  _material_8h.tex  _mesh_8cpp.tex  _mesh_8h.tex  _node_8cpp.tex  _node_8h.tex  _shape_8cpp.tex  _shape_8h.tex  _shape_q4_8cpp.tex  (+33 more)
(+1580 files in other folders)
